--- a/frontend/api/website/fbconfig.json
+++ b/frontend/api/website/fbconfig.json
@@ -1,10 +1,8 @@
-{
-    "apiKey": "AIzaSyD5KiB_WEyAF0uzrVU6aO1h5C1WURpxJ6o",
-    "authDomain": "fdms-382f8.firebaseapp.com",
-    "databaseURL": "https://fdms-382f8-default-rtdb.firebaseio.com",
-    "projectId": "fdms-382f8",
-    "storageBucket": "fdms-382f8.appspot.com",
-    "messagingSenderId": "661144916661",
-    "appId": "1:661144916661:web:8c050285e9edfe7873a4fc",
-    "measurementId": "G-F3ZZZ5DCVG"
-}
+{"apiKey" : "AIzaSyChSRRaiKv5xx31ZcLb1PKDCMQPjOOs7Ic",
+"authDomain": "fdms-def09.firebaseapp.com",
+"projectId": "fdms-def09",
+"databaseURL": "https://fdms-def09-default-rtdb.firebaseio.com/",
+"storageBucket": "fdms-def09.appspot.com",
+"messagingSenderId": "1032386296100",
+"appId": "1:1032386296100:web:026c7b75a542b4b4d95bb1",
+"measurementId": "G-8TLF159XPN"}
